Added latest Log4NetLogger and related classes from Habanero trunk.  Tests for Log4NetLogger have been excluded as they rely on rhino mocks which doesn't work on cf

--- a/source/Habanero.Test/Habanero.Test.csproj
+++ b/source/Habanero.Test/Habanero.Test.csproj
@@ -47,6 +47,10 @@
     <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=1b44e1d426115821">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="mscorlib, Version=3.5.0.0, Culture=neutral, PublicKeyToken=969db8053d3322ac, processorArchitecture=MSIL">
       <SpecificVersion>True</SpecificVersion>
       <HintPath>C:\Program Files (x86)\Microsoft.NET\SDK\CompactFramework\v3.5\WindowsCE\mscorlib.dll</HintPath>
@@ -68,7 +72,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\Rhino.Mocks.dll</HintPath>
     </Reference>
-   <Reference Include="System, Version=3.5.0.0, Culture=neutral, PublicKeyToken=969db8053d3322ac, processorArchitecture=MSIL">
+    <Reference Include="System, Version=3.5.0.0, Culture=neutral, PublicKeyToken=969db8053d3322ac, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>C:\Program Files (x86)\Microsoft.NET\SDK\CompactFramework\v3.5\WindowsCE\System.dll</HintPath>
       <Private>False</Private>
@@ -117,6 +121,7 @@
     <Compile Include="FilledCircleNoPrimaryKey.cs" />
     <Compile Include="FilledCircleNoPrimaryKeyInheritsCircle.cs" />
     <Compile Include="ISampleUserInterfaceMapper.cs" />
+    <Compile Include="Logging\TestLog4NetLogger.cs" />
     <Compile Include="MockExceptionNotifier.cs" />
     <Compile Include="MultiPropBO.cs" />
     <Compile Include="MyBo.cs" />
