Renamed Log4NetLogger to HabaneroLoggerLog4Net

--- a/source/Habanero.Base/Habanero.Base.csproj
+++ b/source/Habanero.Base/Habanero.Base.csproj
@@ -219,7 +219,7 @@
     <Compile Include="LayoutStyle.cs" />
     <Compile Include="Logging\IHabaneroLogger.cs" />
     <Compile Include="Logging\IHabaneroLoggerFactory.cs" />
-    <Compile Include="Logging\Log4NetLogger.cs" />
+    <Compile Include="Logging\HabaneroLoggerLog4Net.cs" />
     <Compile Include="Logging\Log4NetLoggerFactory.cs" />
     <Compile Include="Logging\LogCategory.cs" />
     <Compile Include="NullCrypter.cs" />
