Work on #1734 (Create a criteria from an expression tree)

--- a/source/Habanero.Base/Habanero.Base.csproj
+++ b/source/Habanero.Base/Habanero.Base.csproj
@@ -143,6 +143,7 @@
     <Compile Include="BusinessObjectDTO.cs" />
     <Compile Include="ClassDefCol.cs" />
     <Compile Include="CoverageExcludeAttribute.cs" />
+    <Compile Include="Criteria\CriteriaBuilder.cs" />
     <Compile Include="DataMappers\BoolDataMapper.cs" />
     <Compile Include="DataMappers\ByteArrayDataMapper.cs" />
     <Compile Include="DataMappers\DataMapper.cs" />
