--- a/source/Habanero.Base/Habanero.Base.csproj
+++ b/source/Habanero.Base/Habanero.Base.csproj
@@ -162,11 +162,14 @@
     <Compile Include="DateTimeNowConverter.cs" />
     <Compile Include="DateTimeTodayConverter.cs" />
     <Compile Include="DelegatedExceptionNotifier.cs" />
+    <Compile Include="Encryption\Base64Sha1Hasher.cs" />
+    <Compile Include="Encryption\Utf8Sha1Hasher.cs" />
     <Compile Include="EnumerableExtensions.cs" />
     <Compile Include="Exceptions\InvalidDefinitionException.cs" />
     <Compile Include="Exceptions\RecordedExceptionsException.cs" />
     <Compile Include="IBusinessObjectLookupList.cs" />
     <Compile Include="IDatabaseLookupList.cs" />
+    <Compile Include="Encryption\IHasher.cs" />
     <Compile Include="Logging\ConsoleLoggerFactory.cs" />
     <Compile Include="Logging\IHabaneroLogger.cs" />
     <Compile Include="Logging\IHabaneroLoggerFactory.cs" />
@@ -179,6 +182,7 @@
     <Compile Include="Logging\HabaneroLoggerLog4Net.cs" />
     <Compile Include="Logging\Log4NetLoggerFactory.cs" />
     <Compile Include="Logging\LogCategory.cs" />
+    <Compile Include="NullSecurityController.cs" />
     <Compile Include="OrderCriteriaField.cs" />
     <Compile Include="RecordingExceptionNotifier.cs" />
     <Compile Include="Exceptions\InvalidKeyException.cs" />
@@ -272,8 +276,7 @@
     </Compile>
     <Compile Include="Exceptions\ExceptionUtilities.cs" />
     <Compile Include="Exceptions\HabaneroArgumentException.cs" />
-    <Compile Include="ICrypter.cs" />
-    <Compile Include="Encryption.cs" />
+    <Compile Include="Encryption\ICrypter.cs" />
     <Compile Include="Exceptions\HabaneroException.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -334,7 +337,7 @@
     <Compile Include="ITextFileLoader.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="NullCrypter.cs" />
+    <Compile Include="Encryption\NullCrypter.cs" />
     <Compile Include="NullProgressIndicator.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -349,7 +352,7 @@
     <Compile Include="Result.cs" />
     <Compile Include="ResultSet.cs" />
     <Compile Include="RethrowingExceptionNotifier.cs" />
-    <Compile Include="RSAPasswordCrypter.cs" />
+    <Compile Include="Encryption\RSAPasswordCrypter.cs" />
     <Compile Include="Source.cs" />
     <Compile Include="SqlFormatter.cs" />
     <Compile Include="UIDefCol.cs" />
