Moved TransactionLogBusObj to the Habanero.BO.Logging directory. Copied in ITransactionLoggerFactory from St Mary's Asset Management. Sori will write tests for this.

--- a/source/Habanero.Bo/Habanero.Bo.csproj
+++ b/source/Habanero.Bo/Habanero.Bo.csproj
@@ -381,7 +381,7 @@
     <Compile Include="TransactionCommitterInMemory.cs" />
     <Compile Include="TransactionCommitterMultiSource.cs" />
     <Compile Include="TransactionCommitterRemote.cs" />
-    <Compile Include="TransactionLogBusObj.cs" />
+    <Compile Include="TransactionLogging\TransactionLogBusObj.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="key.snk" />
