--- a/source/Habanero.Test.Db/Habanero.Test.Db.csproj
+++ b/source/Habanero.Test.Db/Habanero.Test.Db.csproj
@@ -262,6 +262,7 @@
     <Compile Include="TestSQLStatement.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="TestSqlStatementBuilder.cs" />
     <Compile Include="TestTransactionalBusinessObjectDB.cs" />
     <Compile Include="TestTransactionCommitterDB.cs" />
     <Compile Include="TestTransactionLoggerDB.cs" />
