--- a/source/Habanero.Test.Db/Habanero.Test.Db.csproj
+++ b/source/Habanero.Test.Db/Habanero.Test.Db.csproj
@@ -266,6 +266,7 @@
     <Compile Include="TestTransactionalBusinessObjectDB.cs" />
     <Compile Include="TestTransactionCommitterDB.cs" />
     <Compile Include="TestTransactionLoggerDB.cs" />
+    <Compile Include="TestTransactionLoggerFactory.cs" />
     <Compile Include="TestUpdateStatementGenerator.cs" />
     <Compile Include="TransactionCommitterStubDB.cs" />
   </ItemGroup>
