Fixed issue #2069 - Add support for Sql Server Compact Edition

--- a/source/Habanero.Db/Habanero.Db.csproj
+++ b/source/Habanero.Db/Habanero.Db.csproj
@@ -143,6 +143,8 @@
     <Compile Include="ConnectionStringFirebirdFactory.cs" />
     <Compile Include="ConnectionStringPostgreSqlFactory.cs" />
     <Compile Include="ConnectionStringSQLiteFactory.cs" />
+    <Compile Include="ConnectionStringSQLServerCeFactory.cs" />
+    <Compile Include="DatabaseConnectionSQLServerCe.cs" />
     <Compile Include="CriteriaDB.cs" />
     <Compile Include="DataAccessorDB.cs" />
     <Compile Include="DatabaseConnectionAccess2007.cs" />
