--- a/source/Habanero.Test.Db/Habanero.Test.Db.csproj
+++ b/source/Habanero.Test.Db/Habanero.Test.Db.csproj
@@ -155,6 +155,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\System.Data.SQLite.DLL</HintPath>
     </Reference>
+    <Reference Include="System.Data.SqlServerCe, Version=3.5.1.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <HintPath>..\..\lib\SQLServerCeV3_5\System.Data.SqlServerCe.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Xml">
       <Name>System.XML</Name>
     </Reference>
@@ -186,6 +190,7 @@
   <ItemGroup>
     <Compile Include="ConcurrencyControl\TestConcurrencyControl_OptimisticLockingVersionNumberDB.cs" />
     <Compile Include="ConcurrencyControl\TestConcurrencyControl_PessimisticLockingDB.cs" />
+    <Compile Include="DatabaseConnection\TestDatabaseConnectionSqlServerCe.cs" />
     <Compile Include="InheritanceSqlGeneration\TestInheritanceBase.cs" />
     <Compile Include="InheritanceSqlGeneration\TestInheritanceClassTable.cs" />
     <Compile Include="InheritanceSqlGeneration\TestInheritanceClassTableCopyID.cs" />
@@ -272,6 +277,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="key.snk" />
+    <Content Include="sqlserverce-testdb.sdf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
