corrected nunit version, according to what is in the lib folder

--- a/source/Habanero.Test.WebGUI/Habanero.Test.WebGUI.csproj
+++ b/source/Habanero.Test.WebGUI/Habanero.Test.WebGUI.csproj
@@ -46,7 +46,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\MySql.Data.dll</HintPath>
     </Reference>
-    <Reference Include="nunit.framework, Version=2.4.6.0">
+    <Reference Include="nunit.framework">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\nunit.framework.dll</HintPath>
     </Reference>
