--- a/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
+++ b/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
@@ -59,11 +59,11 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\NMock2.dll</HintPath>
     </Reference>
-    <Reference Include="nunit.framework, Version=2.4.6.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+    <Reference Include="nunit.framework">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\nunit.framework.dll</HintPath>
     </Reference>
-    <Reference Include="NUnitForms, Version=2.0.3079.32234, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="NUnitForms">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\NUnitForms.dll</HintPath>
     </Reference>
