fixed Bug #2148 - Add support for loading with limits for SQL Server Compact

--- a/source/Habanero.Db/Habanero.Db.csproj
+++ b/source/Habanero.Db/Habanero.Db.csproj
@@ -222,6 +222,7 @@
     <Compile Include="SelectQueryDB.cs" />
     <Compile Include="SourceDB.cs" />
     <Compile Include="SqlFormatterForAccess.cs" />
+    <Compile Include="SqlFormatterForSqlServerCe.cs" />
     <Compile Include="SqlStatement.cs">
       <SubType>Code</SubType>
     </Compile>
