Added a DataAccessorThreadSplitter class which allows you to create a data accessor per thread to ensure thread safety in Sql CE connections.

--- a/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
+++ b/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
@@ -159,6 +159,7 @@
     <Compile Include="ClassDefinition\TestDefClassFactory.cs" />
     <Compile Include="ClassDefinition\TestFilterDef.cs" />
     <Compile Include="ClassDefinition\TestSingleRelationshipDef.cs" />
+    <Compile Include="TestDataAccessorThreadSplitter.cs" />
     <Compile Include="TestEnumerableExtensions.cs" />
     <Compile Include="CriteriaManager\TestCriteriaValues.cs" />
     <Compile Include="CriteriaManager\TestCriteriaBuilder.cs" />
