--- a/source/Habanero.Bo/Habanero.Bo.csproj
+++ b/source/Habanero.Bo/Habanero.Bo.csproj
@@ -176,6 +176,7 @@
     <Compile Include="DataAccessorInMemory.cs" />
     <Compile Include="DataAccessorMultiSource.cs" />
     <Compile Include="DataAccessorRemote.cs" />
+    <Compile Include="DataAccessorThreadSplitter.cs" />
     <Compile Include="DataStoreInMemory.cs" />
     <Compile Include="DataStoreInMemoryBinaryReader.cs" />
     <Compile Include="DataStoreInMemoryBinaryWriter.cs" />
