* add the ability to specify a custom message when preventing deletion of BusinessObjects. The message may contain   the {0} placeholder to have the ToString() representation of the BusinessObject placed into the message. This makes   the generic UI exception notifier and PreventDelete methods viable for user interaction.

--- a/source/Habanero.Bo/Habanero.Bo.csproj
+++ b/source/Habanero.Bo/Habanero.Bo.csproj
@@ -403,7 +403,9 @@
     <Content Include="Loaders\DTDs\primaryKey.dtd" />
     <Content Include="Loaders\DTDs\Prop.dtd" />
     <Content Include="Loaders\DTDs\property.dtd" />
-    <Content Include="Loaders\DTDs\relationship.dtd" />
+    <Content Include="Loaders\DTDs\relationship.dtd">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Loaders\DTDs\simpleLookupList.dtd" />
     <Content Include="Loaders\DTDs\superClass.dtd" />
     <Content Include="Loaders\DTDs\tab.dtd" />
