* add event raisers to DBMigrator so that a program can provide user feedback for longer-running migrations

--- a/source/Habanero.Db/Habanero.Db.csproj
+++ b/source/Habanero.Db/Habanero.Db.csproj
@@ -152,6 +152,7 @@
     <Compile Include="DatabaseConnectionPostgreSql.cs" />
     <Compile Include="DatabaseConnectionSQLite.cs" />
     <Compile Include="DatabaseLookupList.cs" />
+    <Compile Include="DBMigratorEventArgs.cs" />
     <Compile Include="DeleteStatementGenerator.cs" />
     <Compile Include="IDatabaseConnectionCreator.cs" />
     <Compile Include="InsertSqlStatement.cs" />
