--- a/source/Habanero.Test.Db/Habanero.Test.Db.csproj
+++ b/source/Habanero.Test.Db/Habanero.Test.Db.csproj
@@ -134,6 +134,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\Npgsql.dll</HintPath>
     </Reference>
+    <Reference Include="NSubstitute, Version=1.3.0.0, Culture=neutral, PublicKeyToken=92dd2e9066daa5ca, processorArchitecture=MSIL" />
     <Reference Include="nunit.framework, Version=2.4.1.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\nunit.framework.dll</HintPath>
@@ -241,6 +242,7 @@
     <Compile Include="DatabaseConnection\TestDatabaseConnectionFactory.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="TestDBMigratorEventArgs.cs" />
     <Compile Include="TestDeleteStatementGenerator.cs" />
     <Compile Include="TestGeneral.cs" />
     <Compile Include="TestCompositeKeyBO.cs" />
