--- a/source/Habanero.Base/Habanero.Base.csproj
+++ b/source/Habanero.Base/Habanero.Base.csproj
@@ -144,6 +144,7 @@
     <Compile Include="ClassDefCol.cs" />
     <Compile Include="CoverageExcludeAttribute.cs" />
     <Compile Include="Criteria\CriteriaBuilder.cs" />
+    <Compile Include="DatabaseConfigExtensions.cs" />
     <Compile Include="DataMappers\BoolDataMapper.cs" />
     <Compile Include="DataMappers\ByteArrayDataMapper.cs" />
     <Compile Include="DataMappers\DataMapper.cs" />
@@ -172,6 +173,7 @@
     <Compile Include="IBusinessObjectLookupList.cs" />
     <Compile Include="IDatabaseLookupList.cs" />
     <Compile Include="Encryption\IHasher.cs" />
+    <Compile Include="ISupportsRSADecryption.cs" />
     <Compile Include="Logging\ConsoleLoggerFactory.cs" />
     <Compile Include="Logging\IHabaneroLogger.cs" />
     <Compile Include="Logging\IHabaneroLoggerFactory.cs" />
