Fixed issues with AddedObjectsCollection containing the same objects as the PersistedObjectsCollection after load of a reverse relationship. Fixed intermittently failing tests.

--- a/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
+++ b/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
@@ -153,6 +153,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BusinessObjectCollection\BusinessObjectCollectionTestHelper.cs" />
     <Compile Include="BusinessObjectCollection\TestBusinessObjectCollection_Event.cs" />
     <Compile Include="BusinessObjectCollection\TestBusinessObjectCollection_Events.cs" />
     <Compile Include="BusinessObjectLoader\TestBusinessObjectLoaderInMemory.cs" />
@@ -163,6 +164,7 @@
     <Compile Include="ClassDefinition\TestFilterDef.cs" />
     <Compile Include="ClassDefinition\TestSingleRelationshipDef.cs" />
     <Compile Include="PropRule\TestPropRuleShort.cs" />
+    <Compile Include="Relationship\TestMultipleRelationship_AllTypes_Base.cs" />
     <Compile Include="TestDataAccessorThreadSplitter.cs" />
     <Compile Include="TestEnumerableExtensions.cs" />
     <Compile Include="CriteriaManager\TestCriteriaValues.cs" />
