Added tests for and fixed issue with Cancel Edits on Composite Parent after reverse relationship loaded first. Improved Test Setup code with refactorings into FixtureEnvironment.

--- a/source/Habanero.Test.Db/Habanero.Test.Db.csproj
+++ b/source/Habanero.Test.Db/Habanero.Test.Db.csproj
@@ -248,6 +248,9 @@
     <Compile Include="TestCompositeKeyBO.cs" />
     <Compile Include="TestIDatabaseNumberGenerator.cs" />
     <Compile Include="TestInsertStatementGenerator.cs" />
+    <Compile Include="TestMultipleRelationshipCancelEdits_Aggregation_DB.cs" />
+    <Compile Include="TestMultipleRelationshipCancelEdits_Association_DB.cs" />
+    <Compile Include="TestMultipleRelationshipCancelEdits_Composition_DB.cs" />
     <Compile Include="TestMultipleRelationship_Aggregation_DB.cs" />
     <Compile Include="TestMultipleRelationship_Association_DB.cs" />
     <Compile Include="TestMultipleRelationship_Composition_DB.cs" />
