--- a/source/Habanero.Test/Habanero.Test.csproj
+++ b/source/Habanero.Test/Habanero.Test.csproj
@@ -121,6 +121,8 @@
     <Compile Include="Base\DataMappers\TestIntDataMapper.cs" />
     <Compile Include="Base\DataMappers\TestStringDataMapper.cs" />
     <Compile Include="Base\DataMappers\TestTimeSpanDataMapper.cs" />
+    <Compile Include="Base\Data\TestQueryResultField.cs" />
+    <Compile Include="Base\Data\TestQueryResultRow.cs" />
     <Compile Include="Base\Encryption\TestRSAPasswordCrypter.cs" />
     <Compile Include="Base\Encryption\TestUtf8Sha1Hasher.cs" />
     <Compile Include="Base\Logging\TestLog4NetLogger.cs" />
@@ -139,8 +141,9 @@
     <Compile Include="Base\Encryption\TestNullCrypter.cs" />
     <Compile Include="Base\TestProgressIndicators.cs" />
     <Compile Include="Base\TestResult.cs" />
-    <Compile Include="Base\TestResultSet.cs" />
+    <Compile Include="Base\Data\TestQueryResult.cs" />
     <Compile Include="Base\Encryption\TestBase64Sha1Hasher.cs" />
+    <Compile Include="Base\Data\TestQueryResultSorter.cs" />
     <Compile Include="Base\TestXmlWrapper.cs" />
     <Compile Include="BeforeSaveBo.cs" />
     <Compile Include="BOWithCompositePK.cs" />
