--- a/source/Habanero.Db/Habanero.Db.csproj
+++ b/source/Habanero.Db/Habanero.Db.csproj
@@ -222,7 +222,7 @@
     <Compile Include="ParameterNameGenerator.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="ResultSetLoaderDB.cs" />
+    <Compile Include="QueryResultLoaderDb.cs" />
     <Compile Include="SelectQueryDB.cs" />
     <Compile Include="SourceDB.cs" />
     <Compile Include="SqlFormatterForAccess.cs" />
