Edits to sonar project props to get sonar running the tests

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -28,7 +28,7 @@ sonar.dotnet.excludeGeneratedCode=true
 sonar.dotnet.4.0.sdk.directory=C:/Windows/Microsoft.NET/Framework/v4.0.30319
 sonar.dotnet.version=4.0 
 
-sonar.dotnet.visualstudio.testProjectPattern=Habanero.Test,Habanero.Test.Bo,Habanero.Test.Db
+sonar.dotnet.visualstudio.testProjectPattern=*.Tests,*.Test,*.Test.*
 sonar.gallio.coverage.excludes=Habanero.Test.Structure
 
 #skipping fxcop
