Edits to sonar project props to get sonar running the tests

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -28,7 +28,11 @@ sonar.dotnet.excludeGeneratedCode=true
 sonar.dotnet.4.0.sdk.directory=C:/Windows/Microsoft.NET/Framework/v4.0.30319
 sonar.dotnet.version=4.0 
 
-sonar.dotnet.visualstudio.testProjectPattern=*.Tests,*.Test,*.Test.*
+
+sonar.gallio.mode=
+sonar.gallio.coverage.tool=OpenCover
+sonar.gallio.runner=Local
+sonar.dotnet.visualstudio.testProjectPattern=Habanero.Test;Habanero.Test.BO;Habanero.Test.DB
 sonar.gallio.coverage.excludes=Habanero.Test.Structure
 
 #skipping fxcop
